--- a/toDo/package.json
+++ b/toDo/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.2.6",
     "expo": "~51.0.20",
